# jeeves

./: README.md  data.py  jeeves.py  main.py  pyproject.toml  requirements.txt  setup.py  start-mysql.py
services/: mariadb.json  mongo.json  mysql.json  postgres.json  redis.json
